--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}SanGo{% endblock %}
 
 {% block content %}
-<h1>SanGo Main</h1>
+<h1>TSGame</h1>
 {% if user.is_authenticated %}
   Hi there, {{ user.username }}! So, wanna play?
   <noscript>You need to enable JavaScript to run this app.</noscript>
